--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -13,10 +13,11 @@
     "bcrypt": "^6.0.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "nodemailer": "^7.0.5",
-    "package-name": "^0.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
